--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "fsstockapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~48.0.11",
+    "expo-auth-session": "~4.0.3",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
