--- a/package.json
+++ b/package.json
@@ -5,19 +5,56 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.4",
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/elements": "^1.3.17",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "babel-plugin-dotenv-import": "^3.0.1",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.11",
     "expo-auth-session": "~4.0.3",
+    "expo-config": "^1.0.0",
+    "expo-constants": "^14.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
+    "hermes-engine": "^0.11.0",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "expo-splash-screen": "~0.18.1"
+    "react-devtools": "^4.27.6",
+    "react-dom": "18.2.0",
+    "react-native": "^0.71.7",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
+    "styled-components": "^5.3.10",
+    "tailwind-rn": "^4.2.0",
+    "twin.macro": "^3.3.1",
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "concurrently": "^8.0.1",
+    "dotenv-webpack": "^8.0.1",
+    "postcss": "^8.4.23",
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
