--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "babel-plugin-dotenv-import": "^3.0.1",
-    "dotenv": "^16.0.3",
     "expo": "~48.0.11",
     "expo-auth-session": "~4.0.3",
-    "expo-config": "^1.0.0",
     "expo-constants": "^14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-splash-screen": "^0.18.2",
@@ -40,10 +39,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "styled-components": "^5.3.10",
-    "tailwind-rn": "^4.2.0",
-    "twin.macro": "^3.3.1",
-    "twrnc": "^3.6.0"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,10 +47,8 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "concurrently": "^8.0.1",
-    "dotenv-webpack": "^8.0.1",
     "postcss": "^8.4.23",
-    "react-native-svg-transformer": "^1.0.0",
-    "tailwindcss": "^3.3.2"
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
